Fix header width on mobile

--- a/app/styles/components/header.scss
+++ b/app/styles/components/header.scss
@@ -22,6 +22,10 @@ header {
 		align-items:center;
 		justify-content:center;
 
+		@include media(max-width-1024) {
+			width:85%;
+		}
+
 		space {
 			margin-left: auto;
 		}
